# Vsharing

./: DEVELOPMENT_STATUS.md  README.md  meson.build  test_dbus  test_dbus.c  vsharing_ecosystem_plan.md
data/: style.css  vsharing-send.desktop
src/daemon/: auth_manager.c  auth_manager.h  clipboard_engine.c  clipboard_engine.h  discovery.c  discovery.h  input_controller.c  input_controller.h  main.c  notification_bridge.c  notification_bridge.h  screen_mirror.c  screen_mirror.h  server.c  server.h  vfs_bridge.c  vfs_bridge.h  vlink_protocol.c  vlink_protocol.h  vlink_server.c  vlink_server.h
src/ui/: main.c  screen_viewer.c  screen_viewer.h  window.c  window.h
